@@ -18,6 +18,8 @@ plugins {
 }
 tasks.withType(JavaCompile).configureEach {
     options.compilerArgs.add('--enable-preview')
+    options.compilerArgs += "--add-modules"
+    options.compilerArgs += "jdk.incubator.vector"
 }
 
 import org.objectweb.asm.*
